Adding some new Actions

--- a/PT Project.vcxproj
+++ b/PT Project.vcxproj
@@ -270,6 +270,7 @@
 	<ClCompile Include="Actions\AddOperatorAssign.cpp" />
 	<ClCompile Include="Actions\AddStart.cpp" />
     <ClCompile Include="Actions\AddEnd.cpp" />
+	<ClCompile Include="Actions\AddReadAssign.cpp" />
     <ClCompile Include="ApplicationManager.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -283,6 +284,7 @@
 	<ClCompile Include="Statements\OperatorAssign.cpp" />
 	<ClCompile Include="Statements\Start.cpp" />
 	<ClCompile Include="Statements\End.cpp" />
+    <ClCompile Include="Statements\ReadAssign.cpp" />
     <ClCompile Include="Statements\Statement.cpp" />
     <ClCompile Include="main.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
