Adding all the flowchart statement actions
This reverts commit a7156cc49fbef58c829fb3d517aa13be91364971.

--- a/PT Project.vcxproj
+++ b/PT Project.vcxproj
@@ -272,6 +272,7 @@
     <ClCompile Include="Actions\AddEnd.cpp" />
 	  <ClCompile Include="Actions\AddWriteAssign.cpp" />
 	  <ClCompile Include="Actions\AddReadAssign.cpp" />
+	  <ClCompile Include="Actions\AddConditionalAssign.cpp" />
     <ClCompile Include="ApplicationManager.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -287,6 +288,7 @@
 	<ClCompile Include="Statements\End.cpp" />
 	  <ClCompile Include="Statements\Read.cpp" />
 	  <ClCompile Include="Statements\Write.cpp" />
+	  <ClCompile Include="Statements\Conditional.cpp" />
     <ClCompile Include="Statements\Statement.cpp" />
 	  
     <ClCompile Include="main.cpp">
