--- a/PT Project.vcxproj
+++ b/PT Project.vcxproj
@@ -273,6 +273,7 @@
 	  <ClCompile Include="Actions\AddWriteAssign.cpp" />
 	  <ClCompile Include="Actions\AddReadAssign.cpp" />
 	  <ClCompile Include="Actions\AddConditionalAssign.cpp" />
+	  <ClCompile Include="Actions\Save.cpp" />
     <ClCompile Include="ApplicationManager.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
