Load Action Completed

--- a/PT Project.vcxproj
+++ b/PT Project.vcxproj
@@ -273,10 +273,9 @@
 	  <ClCompile Include="Actions\AddWriteAssign.cpp" />
 	  <ClCompile Include="Actions\AddReadAssign.cpp" />
 	  <ClCompile Include="Actions\AddConditionalAssign.cpp" />
-
 	  <ClCompile Include="Actions\Select.cpp" />
-
 	  <ClCompile Include="Actions\Save.cpp" />
+	  <ClCompile Include="Actions\Load.cpp" />
     <ClCompile Include="ApplicationManager.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
