--- a/PT Project.vcxproj
+++ b/PT Project.vcxproj
@@ -275,8 +275,9 @@
 	  <ClCompile Include="Actions\AddConditionalAssign.cpp" />
 	  <ClCompile Include="Actions\Select.cpp" />
 	  <ClCompile Include="Actions\Save.cpp" />
-
 	  <ClCompile Include="Actions\Load.cpp" />
+	  <ClCompile Include="Actions\Copy.cpp" />
+	  <ClCompile Include="Actions\Paste.cpp" />
 
 	  <ClCompile Include="Actions\AddConnector.cpp" />
 	  
